--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,6 +83,7 @@
 
 			//to open external links in a new tab, from: https://harrymartland.co.uk/jekyll-open-links-in-new-tab/
 			const baseUrl = '{{ site.url + site.baseurl }}';
+			console.log(baseUrl);
 			document.addEventListener('click', function (event) {
 			    let anchor = event.target.closest("A");
 			    if(anchor){
