--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,14 +14,14 @@
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/touch-icon.png" sizes="192x192">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicon.png">
 
-		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
+<!-- 		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
 			<script>
 				window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
 				ga('create', '{{ site.google_analytics_key }}', 'auto');
 				ga('send', 'pageview');
 			</script>
 			<script async src='https://www.google-analytics.com/analytics.js'></script>
-		{% endif %}
+		{% endif %} -->
 	</head>
 
 	<body>
