--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,11 +20,10 @@
 			<h1>
 				<a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/emblem.svg" width="40" height="40" alt="{{ site.title }} logo">
 				{{ site.title }} </a>
-				<button type="button" class="open-nav" id="open-nav"></button>
-			</h1>
+ 			</h1>
 
 			<form action="{{ site.baseurl }}/search/" method="get">
-				<input type="text" name="q" id="search-input" placeholder="Search" autofocus>
+				<input type="text" name="q" id="search-input" placeholder="Search (press enter when done)" autofocus>
 				<input type="submit" value="Search" style="display: none;">
 			</form>
 
@@ -63,10 +62,6 @@
 		</section>
 
 		<script>
-			document.getElementById("open-nav").addEventListener("click", function () {
-				document.body.classList.toggle("nav-open");
-			});
-
 			//to open external links in a new tab, from: https://harrymartland.co.uk/jekyll-open-links-in-new-tab/
 			const baseUrl = '{{ site.url }}';
 			document.addEventListener('click', function (event) {
