collapsible submenu yay

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,8 @@
 					{% for group in grouped %}
 						<li class="nav-item top-level {% if group.name == page.category %}current{% endif %}">
 							{% assign items = group.items | sort: 'order' %}
-							<a href="{{ site.baseurl }}{{ items.first.url }}">{{ group.name }}</a>
+							<a class = "collapsible" href="#" onclick="return false;">+ {{ group.name }}</a> 
+							<!-- <a href="{{ site.baseurl }}{{ items.first.url }}">{{ group.name }}</a> -->
 							<ul>
 								{% for item in items %}
 									{% unless item.asg %} <!-- hides assignment descs from nav-->
@@ -62,6 +63,27 @@
 		</section>
 
 		<script>
+
+			//collapsible submenu 
+			var coll = document.getElementsByClassName("collapsible");
+			for (var i = 0; i < coll.length; i++) {
+			  coll[i].addEventListener("click", function() {
+			    
+			    var content = this.nextElementSibling;
+			    if (content.style.display === "block") {
+			      content.style.display = "none";
+			      this.innerHTML = this.innerHTML.replace("x", "+");
+			    } else {
+			      content.style.display = "block";
+			      this.innerHTML = this.innerHTML.replace("+", "x");
+			    }
+			  });
+			}
+
+			// changes + from menu of current page to x. 
+			//todo: make collapsible for good UX (low priority)
+			document.getElementsByClassName("current")[0].innerHTML = document.getElementsByClassName("current")[0].innerHTML.replace("+", "x");
+
 			//to open external links in a new tab, from: https://harrymartland.co.uk/jekyll-open-links-in-new-tab/
 			const baseUrl = '{{ site.url }}';
 			document.addEventListener('click', function (event) {
