--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
 			<h1>
 				<a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/emblem.svg" width="40" height="40" alt="{{ site.title }} logo">
 				{{ site.title }} </a>
+				<button type="button" class="open-nav" id="open-nav"></button>
  			</h1>
 
 			<form action="{{ site.baseurl }}/search/" method="get">
@@ -63,6 +64,10 @@
 		</section>
 
 		<script>
+
+			document.getElementById("open-nav").addEventListener("click", function () {
+				document.body.classList.toggle("nav-open");
+			});
 
 			//collapsible submenu 
 			var coll = document.getElementsByClassName("collapsible");
