debugged external click issue on non-nav pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,12 +82,14 @@
 			      this.innerHTML = this.innerHTML.replace("+", "x");
 			    }
 			  });
-			}
+			};
 
 			// changes + from menu of current page to x. 
 			//todo: make collapsible for good UX (low priority)
-			document.getElementsByClassName("current")[0].innerHTML = document.getElementsByClassName("current")[0].innerHTML.replace("+", "x");
-
+			if(document.getElementsByClassName("current")[0]) {
+				document.getElementsByClassName("current")[0].innerHTML = document.getElementsByClassName("current")[0].innerHTML.replace("+", "x");
+			}
+			
 			//to open external links in a new tab, from: https://harrymartland.co.uk/jekyll-open-links-in-new-tab/
 			const baseUrl = '{{ site.url }}';
 			document.addEventListener('click', function (event) {
@@ -97,7 +99,7 @@
 			        //need http://127.0.0.1 for local testing
 			        if(!href.startsWith(baseUrl) && !href.startsWith('#') && !href.startsWith("http://127.0.0.1")){
 			            window.open(href,'_blank');
-			            event.preventDefault()
+			            event.preventDefault();
 			        }
 			    }
 
