--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,11 +36,11 @@
 					</li>
 					<li class="nav-item top-level {% if page.url == '/todo' %}current{% endif %}">
 						{% assign todo = site.pages | where: 'name', 'todo.md' | first %}
-						<a href="{{ todo.url }}">{{ todo.title }}</a>
+						<a href="{{ site.baseurl }}{{ todo.url }}">{{ todo.title }}</a>
 					</li>
 					<li class="nav-item top-level {% if page.url == '/links' %}current{% endif %}">
 						{% assign links = site.pages | where: 'name', 'links.md' | first %}
-						<a href="{{ links.url }}">{{ links.title }}</a>
+						<a href="{{ site.baseurl }}{{ links.url }}">{{ links.title }}</a>
 					</li>
 
 					{% assign grouped = site.docs | group_by: 'category' %}
